# webpilot

./: .gitignore  .pre-commit-config.yaml  AI_INTEGRATION_COMPLETE.md  ANNOUNCEMENT.md  ANNOUNCEMENT_MCP.md  ASSESSMENT_AND_RECOMMENDATIONS.md  CHANGELOG.md  CHANGELOG_v1.3.0.md  CLAUDE_CODE_WEB_DEV_SYSTEM.md  CLEANUP_COMPLETE.md  COMMUNITY_ANNOUNCEMENT_v1.3.0.md  COMMUNITY_ENGAGEMENT.md  COMPANION_README.md  COMPLETE_WEB_DEV_SYSTEM.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  ENHANCEMENTS_COMPLETE.md  EXAMPLES_COMPLETED.md  IMPLEMENTATION_REALITY_CHECK.md  IMPROVEMENTS.md  IMPROVEMENTS_IMPLEMENTED.md  INSTALLATION_GUIDE.md  LICENSE  LICENSE-MIT  LLM_COMPATIBILITY_AND_ROADMAP.md  LOCAL_LLM_INTEGRATION_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  NIXOS_NATIVE_SOLUTION.md  NIXOS_PLAYWRIGHT_STATUS.md  OPTIONS_1_3_COMPLETE.md  PLAYWRIGHT_MIGRATION_COMPLETE.md  PLAYWRIGHT_MIGRATION_PLAN.md  PROJECT_STATUS.md  PYPI_INSTRUCTIONS.md  Procfile  QUICK_DECISION_GUIDE.md  QUICK_SETUP.md  README.md  (+63 more)
.archive-selenium-2025-10-02/: real_browser_automation.py
.claude-companion/bug-fixes/: uigenerator_fix.json
.github/workflows/: webpilot-tests.yml
docs/: Makefile  conf.py  index.html  index.rst  mcp_integration.md
docs/examples/: basic_automation.py  demo_webdevops.py  test_all_features.py
examples/: 01_basic_automation.py  01_natural_language_testing.py  02_self_healing_tests.py  02_test_generation.py  03_cloud_testing.py  03_visual_regression_ai.py  04_cicd_integration.py  04_test_generation.py  05_performance_monitoring.py  05_performance_testing.py  06_accessibility_testing.py  07_devops_integration.py  README.md  complete_web_dev_demo.py  mcp_enhanced_demo.py  mcp_quickstart.py  natural_language_test_generation.py  run_all_examples.py  test_terra_atlas.py  test_v2_real_playwright.py  v1.4.1_features_demo.py
results/: site_status.json
src/webpilot/: __init__.py  core.py
src/webpilot/adapters/: __init__.py  openai_adapter.py
src/webpilot/ai/: __init__.py  natural_language.py  simple_ai.py  smart_finder.py  smart_selectors.py
src/webpilot/cli/: universal_cli.py
src/webpilot/core/: __init__.py  multi_browser.py  playwright_automation.py  webpilot_unified.py
src/webpilot/integrations/: __init__.py  dev_server.py  langchain_tools.py  lighthouse.py
src/webpilot/intelligence/: autonomous_agent.py  visual_intelligence.py
src/webpilot/server/: __init__.py  rest_api.py
src/webpilot/testing/: accessibility.py  natural_language_tests.py  test_generator.py  visual_regression.py
src/webpilot/utils/: __init__.py  failure_capture.py  network_mock.py  retry.py  smart_errors.py
src/webpilot/v2/: __init__.py  ai_webpilot.py  playwright_adapter.py
terra-atlas-tests/: terra_atlas_report_20250912_220232.json
terra-lumina/terra-atlas-app/: VISUAL_VERIFICATION_STRATEGY.md  WEBPILOT_WORKFLOW.md
terra-lumina/terra-atlas-app/docs/visual-evidence/: README.md
terra-lumina/terra-atlas-app/scripts/: visual-verify-globe.sh
terra-lumina/terra-atlas-app/tests/: README.md  complete-globe-test.py  demo-dev-server-detection.py  webpilot-globe-test.py
tests/: test_all_new_features.py  test_v1_4_1_features.py  test_webpilot_comprehensive.py
