[tool.poetry]
name = "claude-webpilot"
version = "2.0.0"
description = "Modern Web Automation powered by Playwright - 63% faster, more reliable, zero breaking changes"
authors = ["WebPilot Contributors"]
maintainers = ["WebPilot Team <webpilot@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "webpilot", from = "src"}]
homepage = "https://github.com/Luminous-Dynamics/webpilot"
repository = "https://github.com/Luminous-Dynamics/webpilot"
documentation = "https://luminous-dynamics.github.io/webpilot/"
keywords = [
    "web automation",
    "testing",
    "playwright",
    "browser automation",
    "devops",
    "ci/cd",
    "multi-browser testing",
    "test generation",
    "cloud testing",
    "accessibility testing",
    "performance testing",
    "mcp",
    "model context protocol",
    "ai assistant integration"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.10"
# Core browser automation (Playwright - primary backend)
playwright = "^1.55.0"
# Legacy support (Selenium - optional for backward compatibility)
selenium = { version = "^4.29.0", optional = true }

# Core dependencies
aiohttp = "^3.12.0"
pillow = "^10.0.0"
beautifulsoup4 = "^4.13.0"
requests = "^2.31.0"
click = "^8.1.0"
pyyaml = "^6.0.2"
rich = "^13.0.0"

# Optional dependencies for advanced features
opencv-python = { version = "^4.12.0", optional = true }
pytesseract = { version = "^0.3.10", optional = true }
numpy = { version = ">=1.26.0", optional = true }
scikit-learn = { version = "^1.7.2", optional = true }
fastapi = { version = "^0.100.0", optional = true }
uvicorn = { version = "^0.30.0", optional = true }
websockets = { version = "^12.0", optional = true }
openai = { version = "^1.0.0", optional = true }
langchain = { version = ">=0.1.0", optional = true }
# langchain-community = { version = ">=0.1.0", optional = true }  # Temporarily disabled

[tool.poetry.extras]
vision = ["opencv-python", "pytesseract", "numpy"]
llm = ["openai", "langchain"]
legacy-selenium = ["selenium"]
api = ["fastapi", "uvicorn", "websockets"]
ml = ["scikit-learn", "numpy"]
all = ["opencv-python", "pytesseract", "numpy", "openai", "langchain", "selenium", "fastapi", "uvicorn", "websockets", "scikit-learn"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
isort = "^6.0.1"

[tool.poetry.scripts]
webpilot = "webpilot.cli.universal_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=webpilot --cov-report=term-missing"